force-app/main/default/objects/Application_Log__c/fields/AdditionalPayload__c.field-meta.xml
<CustomField>
    <fullName>AdditionalPayload__c</fullName>
    <label>Additional Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>