force-app/main/default/objects/Application_Log__c/fields/ComponentName__c.field-meta.xml
<CustomField>
    <fullName>ComponentName__c</fullName>
    <label>Component Name</label>
    <length>768</length>
    <type>LongTextArea</type>
</CustomField>