force-app/main/default/objects/Application_Log__c/fields/CPUTime__c.field-meta.xml
<CustomField>
    <fullName>CPUTime__c</fullName>
    <label>CPU Time (Consumed)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>