force-app/main/default/objects/Application_Log__c/fields/DML_Consumed__c.field-meta.xml
<CustomField>
    <fullName>DML_Consumed__c</fullName>
    <label>DML Consumed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>