force-app/main/default/objects/Application_Log__c/fields/HeapSize__c.field-meta.xml
<CustomField>
    <fullName>HeapSize__c</fullName>
    <label>Heap Size (Consumed)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>