force-app/main/default/objects/Application_Log__c/fields/LogMessage__c.field-meta.xml
<CustomField>
    <fullName>LogMessage__c</fullName>
    <label>Log Message</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>