force-app/main/default/objects/Application_Log__c/fields/RecordName__c.field-meta.xml
<CustomField>
    <fullName>RecordName__c</fullName>
    <label>Record Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>