force-app/main/default/objects/Application_Log__c/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <label>Record Type</label>
    <length>150</length>
    <type>Text</type>
</CustomField>