force-app/main/default/objects/Application_Log__c/fields/SOQL_Used__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Used__c</fullName>
    <label>SOQL Used</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>