force-app/main/default/objects/Application_Log__c/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <label>UUID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>